Ajout des commentaires des classes MarkovApp, MarkovChain, MarkovData.