@@ -7,6 +7,11 @@ import java.nio.file.Paths;
 
 import markov.MarkovChain;
 
+/**
+ * MarkovApp est la classe représentant l'application Chaine de Markov.
+ * 
+ * @author Pierre-Nicolas
+ */
 public class MarkovApp {
 	
 	public static void main(String[] args) throws Exception {
@@ -25,7 +30,8 @@ public class MarkovApp {
     public static String readFileAsString(String fileName) throws Exception { 
         String data = ""; 
         Path path = Paths.get(fileName); 
-        data = Files.readString(path, StandardCharsets.UTF_8); 
+        //data = Files.readString(path, StandardCharsets.UTF_8);
+        data = new String(Files.readAllBytes(path)); 
         return data; 
     } 
     
